--- a/Areas/Management/Views/Sales/Sales.cshtml
+++ b/Areas/Management/Views/Sales/Sales.cshtml
@@ -397,6 +397,7 @@
                 success: function (mydata) {
                     if (mydata == 1) {
                         alert("Data has been saved");
+                        window.location.href = "/Management/Sales/Salesindex";
                     }
                     else {
                         alert("Data has been  not saved");
