--- a/Areas/Management/Views/Inventory/ProductDetails.cshtml
+++ b/Areas/Management/Views/Inventory/ProductDetails.cshtml
@@ -50,7 +50,7 @@
             @Html.DisplayFor(model => model.SalesRemainQty)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.RemainingQty)
+            Work Remaing Quantity
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RemainingQty)
