--- a/Areas/Management/Views/Inventory/ProductDetails.cshtml
+++ b/Areas/Management/Views/Inventory/ProductDetails.cshtml
@@ -44,13 +44,7 @@
             @Html.DisplayFor(model => model.InitialProductStockQty)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SalesRemainQty)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SalesRemainQty)
-        </dd>
-        <dt class="col-sm-2">
-            Work Remaing Quantity
+            Remaing Quantity
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RemainingQty)
