--- a/Areas/Management/Views/Work/WorkManage.cshtml
+++ b/Areas/Management/Views/Work/WorkManage.cshtml
@@ -13,7 +13,7 @@
         <!-- form start -->
 
         <div class="card-body">
-
+            <input type="hidden" asp-for="Product" />
             <div class="row">
                 <div class="col-md-2">
                     <div class="form-group">
@@ -94,6 +94,7 @@
         <h4 class="card-title"><strong>Delivery/payment</strong></h4>
 
         <form asp-action="WorkManage">
+            <input type="hidden" asp-for="Product" />
             <div class="card-body">
                 <input type="hidden" asp-for="WorkId">
                 <div class="row">
@@ -125,20 +126,20 @@
                             <input type="number" class="form-control" id="invqty" placeholder="Payment" asp-for="NewPayment">
                         </div>
                         @*@if (Model.PaidAmount >= Model.Payment)
-        {
-            <div class="form-group">
-                <label for="invqty">Payment</label>
-                <input type="number" class="form-control" readonly id="invqty" placeholder="Payment" asp-for="NewPayment">
-            </div>
+                    {
+                        <div class="form-group">
+                            <label for="invqty">Payment</label>
+                            <input type="number" class="form-control" readonly id="invqty" placeholder="Payment" asp-for="NewPayment">
+                        </div>
 
-        }
-        else
-        {
-            <div class="form-group">
-                <label for="invqty">Payment</label>
-                <input type="number" class="form-control" id="invqty" placeholder="Payment" asp-for="NewPayment">
-            </div>
-        }*@
+                    }
+                    else
+                    {
+                        <div class="form-group">
+                            <label for="invqty">Payment</label>
+                            <input type="number" class="form-control" id="invqty" placeholder="Payment" asp-for="NewPayment">
+                        </div>
+                    }*@
 
                     </div>
                 </div>
