--- a/Areas/Management/Views/Inventory/ProductIndex.cshtml
+++ b/Areas/Management/Views/Inventory/ProductIndex.cshtml
@@ -48,7 +48,7 @@
                                 <a asp-action="EditProduct" asp-route-id="@items.Id" type="button" class="btn btn-warning">Edit</a>
                                 <a asp-action="ProductDetails" asp-route-id="@items.Id" type="button" class="btn btn-info">Details</a>
                                 <a asp-action="ProductManage" asp-route-id="@items.Id" type="button" class="btn btn-dark">Manage</a>
-                                <a asp-action="ProductQrCode" asp-route-id="@items.Id" type="button" class="btn btn-info">Genarete QR</a>
+                                <a asp-action="ProductQrCode" asp-route-id="@items.Id" type="button" class="btn btn-info">QR</a>
 
                             </div>
 
