--- a/Areas/Management/Views/Sales/Salesdetails.cshtml
+++ b/Areas/Management/Views/Sales/Salesdetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model PurityERP.Areas.Management.ViewModel.CustomerVM
+﻿@model IEnumerable<CustomerVM>;
 
 
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -28,26 +28,33 @@
                         <th>Date</th>
                         <th>Product Name</th>
                         <th>Qty</th>
+                        <th>Discount</th>
+                        <th>Vat</th>
                         <th>Amount</th>
-                        <th>Action</th>
+                        @*<th>Action</th>*@
 
                     </tr>
                 </thead>
                 <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.Date</td>
+                            <td>@item.ProductTittle</td>
+                            <td>@item.OrderQty</td>
+                            <td>@item.PDiscount</td>
+                            <td>@item.Pvat</td>
+                            <td>@item.Amount</td>
+                            @*<td class="float-right">
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <a asp-action="Deletelft" asp-route-ReportID="@item.SaleID" type="button" class="btn btn-info">Delete</a>
+                                </div>
+                            </td>*@
 
-                    <tr>
+                        </tr>
+                    }
 
-                        <td>@Model.Date</td>
-                        <td>@Model.ProductTittle</td>
-                        <td>@Model.OrderQty</td>
-                        <td>@Model.Amount</td>
-                        <td class="float-right">
-                            <div class="btn-group" role="group" aria-label="Basic example">
-                                <a asp-action="Deletelft" asp-route-ReportID="@Model.SaleID" type="button" class="btn btn-info">Delete</a>
-                            </div>
-                        </td>
 
-                    </tr>
 
 
                 </tbody>
@@ -56,8 +63,10 @@
                         <th>Date</th>
                         <th>Product Name</th>
                         <th>Qty</th>
+                        <th>Discount</th>
+                        <th>Vat</th>
                         <th>Amount</th>
-                        <th>Action</th>
+                        @*<th>Action</th>*@
                     </tr>
                 </tfoot>
             </table>
