--- a/Areas/Management/Views/Inventory/InventoryIndex.cshtml
+++ b/Areas/Management/Views/Inventory/InventoryIndex.cshtml
@@ -122,15 +122,15 @@
             });
         </script>
         <script>
-            $(document).ready(function () {
                 $('.crprint').click(function () {
 
                     var val = $(this).closest("tr").find("input[class='mainid']").val();
-                    var host = window.origin;
-                   // var host = "https://localhost:44326";
-                    window.open(host + '/Reports/Rep/QRPurity?ItemCode=' + val + '&St=Inventory', '_blank');
+                    var host = window.origin;//publish
+                   //var host = "https://localhost:44326";
+                    window.open(host + '/Reports/Rep/QRPurity?ItemCode=' + val + '&St=Inventory', '_blank');//publish
+                    //window.open(host + '/Rep/QRPurity?ItemCode=' + val + '&St=Inventory', '_blank');
                 });
-            });
+           
         </script>
     }
 </body>
