--- a/Areas/Management/Views/Inventory/ProductIndex.cshtml
+++ b/Areas/Management/Views/Inventory/ProductIndex.cshtml
@@ -70,6 +70,7 @@
                     <tr>
                         <th>Product Code</th>
                         <th>Product Tittle</th>
+                        <th>Quanity</th>
                         <th>Sales price</th>
                         <th>Action</th>
                     </tr>
@@ -104,15 +105,15 @@
             });
         </script>
         <script>
-            $(document).ready(function () {
                 $('.crprint').click(function () {
 
                     var val = $(this).closest("tr").find("input[class='mainid']").val();
-                    var host = window.origin;
+                    var host = window.origin;//publish
                     //var host = "https://localhost:44326";
-                    window.open(host + '/Reports/Rep/QRPurity?ItemCode=' + val + '&St=Product', '_blank');
+                    window.open(host + '/Reports/Rep/QRPurity?ItemCode=' + val + '&St=Product', '_blank');//publish
+                    //window.open(host + '/Rep/QRPurity?ItemCode=' + val + '&St=Product', '_blank');
                 });
-            });
+            
         </script>
     }
 </body>
